# civ-core

./: .chktexrc  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  _bp-test.txt  config.toml  directory_tree.txt  pyproject.toml  run.bat  run.sh  tempCodeRunnerFile.bat
.ai/: CONTEXT.md  PROGRESS.md  ROADMAP.md  RULES.md
.claude/: settings.local.json
.claude/skills/civ-core-add-detection-type/: SKILL.md
.claude/skills/civ-core-anchor-calc/: SKILL.md
.claude/skills/civ-core-debug-rpc/: SKILL.md
.claude/skills/civ-core-dev/: SKILL.md
.claude/skills/civ-core-make-template/: SKILL.md
.claude/skills/civ-core-mcp-tools/: SKILL.md
.deepseek/state/: subagents.v1.json
.github/workflows/: ci.yml
00_使用手册/: 检测辅助工具开发与重构原则总纲.md
02_Core/: config_editor.py  curve_template_editor.py  main.py  pipeline_sort_renumber.py  table_format.py  ui_components.py  word2pdf.py
02_Core/common/: excel_helpers.py  patterns.py  plot_helpers.py  ui_helpers.py  word_helpers.py
99_old_code/: 交叉引用固定格式.js
99_old_code/old_jsa/: 全局括号处理.js
data/output/: _docx_full_text.txt  _docx_full_text_0181.txt  _docx_full_text_0184.txt  _docx_full_text_0185.txt  _docx_tables_preview.txt  _smoke_step12.txt
data/training_materials/: 回弹法检测混凝土强度检测技术.pptx  审核提问.txt  检测鉴定常见问题汇总.txt
doc/: 开发环境配置手册.md  检测辅助工具开发与重构原则总纲.md
doc/dev_guide/: 检测辅助工具开发与重构原则总纲.md
docs/: PRIORITY.md  VISION.md  report-generation-flow.md  template-placeholders-quickstart.md
docs/audit/: 2026-05-24-00-收敛报告.md  2026-05-24-01-土木工程师不可读报错.md  2026-05-24-02-RPC输入校验缺口.md  2026-05-24-03-按钮防重复点击.md  2026-05-24-04-点击顺序错误.md  2026-05-24-05-数据格式有误.md  2026-05-24-06-意外关机与崩溃恢复.md  2026-05-24-07-大文件与内存.md
docs/civil_kb/formats/: leeb_hardness_excel.md
docs/civil_kb/formulas/: INSP-001_leeb_hardness_steel.md  INSP-002_core_drilling_concrete_strength.md  (+1 more)
docs/dev_guide/: 开发环境配置手册.md  检测辅助工具开发与重构原则总纲.md  检测辅助工具开发与重构指导手册.md  项目开发通用原则.md
docs/dev_journal/: CONTEXT.md  PROGRESS.md
docs/plans/: 2026-05-23-electron-migration-rich-preview.md  2026-05-25-bugfix-and-template-editor.md  2026-05-26-excel-driven-template-idea.md  2026-05-29-template-editor.md  2026-05-31-report-table-generator.md  2026-06-02-detection-pipeline-abstraction.md  2026-06-02-整治割裂-大白话路线.md  refactor-service-layer.md
docs/reference_flies/: solo_template.tex
dotnet/: CLAUDE.md
dotnet/civ-doc/: NuGet.config  Program.cs  civ-doc.csproj
dotnet/civ-doc.Tests/: AnchorBatchInfoSheetTests.cs  AnchorCalculatorTests.cs  AnchorExcelReaderTests.cs  AnchorHandlersTests.cs  AnchorJudgmentBasisSheetTests.cs  AnchorMathTests.cs  AnchorReportTableTests.cs  AnchorResultMetadataSheetTests.cs  AnchorRowResolverTests.cs  AnchorTemplateWriterTests.cs  AnchorWordTableTests.cs  CoatingAnalysisSheetTests.cs  CoatingCalculatorTests.cs  CoatingExcelReaderTests.cs  CoatingHandlersTests.cs  CoatingMathTests.cs  CoatingResultReaderTests.cs  CoatingTemplateExpanderTests.cs  CoatingTemplateWriterTests.cs  CoatingWordTableTests.cs  DocxReportAssemblerTests.cs  DocxTestFixtures.cs  FilesHandlersTests.cs  HeaderNormalizerTests.cs  LeebCalculatorTests.cs  LeebExcelReaderTests.cs  LeebHandlersTests.cs  LeebMathTests.cs  PdfToolsHandlersTests.cs  PlaceholderRendererTests.cs  ReportGeneratorTests.cs  ReportHandlersTests.cs  StandardsDbTests.cs  TemplateConfigTests.cs  TemplateHandlersTests.cs  TemplateParserTests.cs  Word2PdfHandlersTests.cs  WorkspaceHandlersTests.cs  civ-doc.Tests.csproj
frontend/: .prettierignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  sidecar.rs  watcher.rs
logs/: audit.jsonl
mcp/: CLAUDE.md  package-lock.json  package.json  tsconfig.json
mcp/scripts/: smoke.mjs
mcp/src/: index.ts  router.ts  sidecar.ts
mcp/tests/: router.test.ts  sidecar.test.ts
old_code/02_Core/: auto_filler.py  body_format.py  coord_picker.py  运行主程序.bat
old_code/04_Config/: report_style_config.json
old_code/05_JSA/: wps_format.js
old_code/06_Report_Template/: 说明.txt
old_code/old_jsa/: 手写字体表格版.js  文字文档表格排版.js  防火截面快速生成.js
presets/plot_curves/: curve_presets.json
presets/ui/: style_preset.yaml
scripts/: _copy_docx.py  _copy_files.py  _copy_template.py  _extract_docx.py  _extract_pdfs.py  _extract_pptx.py  _test_pptx.py  healthcheck.py  init_layout.py  setup_env.bat
src/civ_core/: main.py
src/civil_auto/: main.py
templates/latex/: latex_template.tex  template.tex
templates/word/: 上传报告格式审批页(1).doc  上传检测报告格式要求2016年1月1日(1).doc  综合检测报告审批页(1).doc  综合检测报告格式要求(1).doc  通用模板.doc
tests/: test_activity_bar.py  test_agent_panel.py  test_api_handlers.py  test_api_server.py  test_basic.py  test_breadcrumb_bar.py  test_calc_core_drilling.py  test_calc_leeb_batch.py  test_calc_leeb_hardness.py  test_calc_leeb_integration.py  test_calc_rebound.py  test_calc_schema.py  test_chart_writer_bytes.py  test_cross_ref_fix.py  test_curves_editor.py  test_data_cache.py  test_data_source_pane.py  test_exceptions.py  test_global_plot_config.py  test_leeb_excel.py  test_leeb_hardness_view.py  test_live_preview_pane.py  test_log_panel.py  test_pdf_io.py  test_pdf_tools_view.py  test_plot_center_pane.py  test_plot_curves_dualy_err.py  test_plot_curves_filename_prefix.py  test_plot_curves_output_format.py  test_preset_accordion_panel.py  test_preset_form_panel.py  test_preset_list_buttons.py  test_preset_manager.py  test_preset_undo.py  test_preset_validation.py  test_preview_pane.py  test_project_board_view.py  test_project_board_widget.py  test_project_db.py  test_project_delegate.py  (+18 more)
(+338 files in other folders)
