[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civ-core"
version = "0.2.3-dev"
description = "筑核"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "ZGQ" },
]
keywords = ["civil-engineering", "automation", "word-com", "fluent-ui"]

dependencies = [
    # UI
    "pyside6>=6.7,<7.0",
    "PySide6-Fluent-Widgets>=1.7.0",
    # Config & validation
    # Office automation
    "pywin32>=306",
    "python-docx==1.2.0",
    "openpyxl==3.1.5",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    # PDF / image
    "pymupdf>=1.24",
    "pypdf>=4.0",
    "pillow>=10.4",
    "handright==8.2.0",
    # Utils
    "lxml>=5.0",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
]

[project.scripts]
civ-core = "civ_core.main:main"

# ── 包发现：src/ 布局 ─────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
civ_core = ["py.typed"]

# ── Pyright / Pylance ────────────────────────────────────────────
[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",
    "**/.*",
    "data",
    "logs",
    "templates",
    "02_Core",          # legacy customtkinter code, retained until migration done
    "00_使用手册",
    "99_old_JSA",
]
executionEnvironments = [
    { root = "src" },
]
pythonVersion = "3.12"
typeCheckingMode = "basic"

# ── Ruff（轻量 lint + format） ────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle 错误
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle 警告
]
# 新增忽略规则：RUF001, RUF002, RUF003 是专门针对全角/易混淆字符的，写中文注释必触发，直接忽略
ignore = ["RUF001", "RUF002", "RUF003", "E402", "E722", "E501"]

# ── pytest ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# tests/test_cross_ref_fix.py 引用了已迁移走的 civ_core.models.schema（旧路径），
# 整个文件登记在 PROGRESS.md 的 P2 清理项里，待 02_Core 迁移完成后删除。
# 现在放进 addopts 是为了让本地与 CI 行为一致，不必每次手敲 --ignore。
addopts = "-q --strict-markers "

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-qt>=4.4",
    "ruff>=0.15.12",
]
