[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civ-core"
version = "0.2.3-dev"
description = "筑核 · 土木检测内业报告自动化（Python sidecar 子项目，仅承载 matplotlib 图表引擎；GUI/计算/MCP 在外层子目录）"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    { name = "ZGQ" },
]
keywords = ["civil-engineering", "automation", "report-generation", "matplotlib", "mcp-server"]

dependencies = [
    # Python sidecar 当前职责：plot_curves（matplotlib 图表引擎） + standards.db seed。
    # 其余（Excel / Word / PDF / 回收站等）已迁 C# sidecar，对应依赖（pywin32 /
    # python-docx / openpyxl / pillow / dateutil / javaobj / send2trash）已删。
    # 钻芯 / 回弹（calc_functions.py）当前是 Python 实现，下一步切 C# 时再清。
    "matplotlib>=3.9",
    "numpy>=1.26",       # matplotlib 必依，显式声明锁版本范围
    "openpyxl>=3.1",     # infra_io/excel_reader.py 读输入 xlsx（plot_curves 链路）
    "pyyaml>=6.0.3",     # style_loader 解析预设 YAML
    # tzdata：Windows stdlib zoneinfo 不带 IANA 数据库，
    # utils/logger.py 的 ZoneInfo('Asia/Shanghai') 必依
    "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
civ-core = "civ_core.main:main"

# ── 包发现：src/ 布局 ─────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
civ_core = ["py.typed"]

# ── Pyright / Pylance ────────────────────────────────────────────
[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",
    "**/.*",
    "data",
    "logs",
    "templates",
]
executionEnvironments = [
    { root = "src" },
]
pythonVersion = "3.12"
typeCheckingMode = "basic"

# ── Ruff（轻量 lint + format） ────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle 错误
    "F",  # Pyflakes
    "I",  # isort
    "W",  # pycodestyle 警告
]
# 新增忽略规则：RUF001, RUF002, RUF003 是专门针对全角/易混淆字符的，写中文注释必触发，直接忽略
ignore = ["RUF001", "RUF002", "RUF003", "E402", "E722", "E501"]

# ── pytest ───────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# tests/test_cross_ref_fix.py 引用了已迁移走的 civ_core.models.schema（旧路径），
# 整个文件登记在 PROGRESS.md 的 P2 清理项里，待 02_Core 迁移完成后删除。
# 现在放进 addopts 是为了让本地与 CI 行为一致，不必每次手敲 --ignore。
addopts = "-q --strict-markers "

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
