[package]
name = "civ-core"
version = "0.1.0"
description = "civ-core 筑核 — 土木检测内业工具"
authors = ["ZGQ2001"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
anyhow = "1"
# tokio: tauri 已经带 runtime；这里显式声明用到的子模块
tokio = { version = "1", features = ["process", "io-util", "sync", "rt", "macros", "time"] }
